[package]
name = "iota_streams_lib"
version = "0.1.0"
authors = ["Lorenzo Limoli <lorenzo.limoli@outlook.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name= "iota_streams_lib"
path= "src/lib.rs"

[dependencies]
anyhow = { version = "1.0", default-features = false }
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "chrysalis-2", features = ["tangle", "async"]}
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", branch = "dev", features = ["blake2b"]}
tokio = { version = "1.1", features = ["full"] }
async-trait = "0.1.30"
chrono = "0.4"
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"
base64 = "^0.12"
rand = "0.8.3"
failure = "0.1.8"
